@@ -539,7 +539,10 @@ if test -f "${pkgdatadir}"/unicode.pf2; then
     cp "${pkgdatadir}"/unicode.pf2 "${grubdir}"/fonts
 fi
 
-is_path_readable_by_grub "${grubdir}/${grub_modinfo_target_cpu}-$grub_modinfo_platform" || (echo "${grubdir}" not readable 1>&2 ; exit 1)
+if ! is_path_readable_by_grub "${grubdir}"; then
+    gettext_printf "Path \`%s' is not readable by GRUB on boot. Installation is impossible. Aborting.\n" "${grubdir}" 1>&2
+    exit 1
+fi
 
 # Write device to a variable so we don't have to traverse /dev every time.
 grub_device="`"$grub_probe" --device-map="${device_map}" --target=device "${grubdir}"`" || exit 1
